--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -6,7 +6,6 @@
 
 </ion-header>
 
-
 <ion-content padding>
   <ion-list no-border>
 
@@ -14,21 +13,21 @@
       Application
     </ion-list-header>
     <ion-item>
-      <ion-toggle checked="false"></ion-toggle>
+      <ion-toggle item-right disabled [(ngModel)]="routerState" (ionChange)="togglePrompt()"></ion-toggle>
       <ion-label>
-        Use the internet
+        Use Internet:&nbsp;{{routerPowerState}}
       </ion-label>
-      <ion-icon name='body' item-left></ion-icon>
+      <ion-icon name='cloud-upload' item-left></ion-icon>
     </ion-item>
     <ion-item>
-      <ion-icon name='planet' item-left></ion-icon>
+      <ion-icon name='cloud-done' item-left></ion-icon>
       Latest Prices
       <ion-note item-right>
         2017-01-05
       </ion-note>
     </ion-item>
     <ion-item>
-      <ion-icon name='planet' item-left></ion-icon>
+      <ion-icon name='information-circle' item-left></ion-icon>
       Version
       <ion-note item-right>
         0.0.2
@@ -40,7 +39,7 @@
 
   <h2>About</h2>
 
-  <h1 text-center class="logo">Price Registry</h1>
+  <h1 text-center class="logo">Medicine Price Registry</h1>
   <br />
 
   <h3>What is this all about?</h3>
@@ -54,7 +53,8 @@
   <p>Please note that allowed dispensing fees may change and this website may not be completely up-to-date. The prices listed
     above were valid at 2017-01-05.</p>
 
-  <h2> Thanks to the Following </h2>
+  <h2 text-center> Thanks to the Following </h2>
+  <img text-center src="./assets/img/code4SA_logo.png" />
   <p>Code for South Africa</p>
 
   <p text-center>Hand Crafted by LeRoy Gumede</p>
