Added fonts, lint
* Added Fonts
* Updated Settings UI
* Added tutorial page for future dev
* Added lint

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -37,25 +37,25 @@
   </ion-list>
 
 
-  <h2>About</h2>
+  <h2 color="paragraphs">About</h2>
 
   <h1 text-center class="logo">Medicine Price Registry</h1>
   <br />
 
   <h3>What is this all about?</h3>
-  <p>Did you know that medicine prices are regulated in South Africa? Using this application you can:</p>
-  <ul>
+  <p color="paragraphs">Did you know that medicine prices are regulated in South Africa? Using this application you can:</p>
+  <ul color="paragraphs">
     <li>Know what to expect to pay when you get a prescription from your doctor</li>
     <li>Find possible generics for a branded medicine. Ask your doctor if these medicines are viable alternatives.</li>
     <li>Ensure that you are not being overcharged for your medicine.</li>
   </ul>
 
-  <p>Please note that allowed dispensing fees may change and this website may not be completely up-to-date. The prices listed
+  <p color="paragraphs">Please note that allowed dispensing fees may change and this website may not be completely up-to-date. The prices listed
     above were valid at 2017-01-05.</p>
 
-  <h2 text-center> Thanks to the Following </h2>
-  <img text-center src="./assets/img/code4SA_logo.png" />
-  <p>Code for South Africa</p>
+  <h3 color="paragraphs" text-center> Thanks to the Following </h3>
+  <img class="specialthanks" text-center src="./assets/img/code4SA_logo.png" />
+  <p text-center>Code for South Africa</p>
 
-  <p text-center>Hand Crafted by LeRoy Gumede</p>
+  <p text-center color="darkGrey">Hand Crafted by LeRoy Gumede</p>
 </ion-content>
