--- a/src/pages/tutorial-page/tutorial-page.html
+++ b/src/pages/tutorial-page/tutorial-page.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>TutorialPage</ion-title>
+    <ion-title>Welcome</ion-title>
   </ion-navbar>
 
 </ion-header>
